# ProjectMarch

./: .catkin_lint  .clang-format  .clang-format-ignore  .clang-tidy  .coveragerc  .fastrtps-profile.xml  .flake-baseline  .flake8  .gitattributes  .gitignore  .gitlab-ci.py  .gitlab-ci.yml  .gitmodules  .rosinstall  .travis.yml  =20.3  CMakeLists.txt  CODEOWNERS  Dockerfile  Dockerfile.base  LICENSE-ADDITIONAL-TERMS.md  README.md  build.sh  build_locally.sh  codeclimate.json  codecov.yaml  codecov.yml  conf.py  coverage.sh  create_venv.sh  dependencies.rosinstall  doc.sh  generated-config.yml  index.rst  install.sh  log_lower.mtb  march_aliases.sh  package.xml  pyproject.toml  requirements.apt  (+9 more)
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: CustomSetpoint.msg  ECtoIPD.msg  ECtoJH.msg  ECtoLG.msg  ECtoPDB.msg  ECtoUG.msg  IPDtoEC.msg  IUPos.msg  JHtoEC.msg  PDBtoDL.msg  RADPos.msg  SDOMsg.msg  data8Msg.msg  errorMsg.msg  float32Msg.msg  playSound.msg  register16Msg.msg  register32Msg.msg  temperatureMsg.msg
custom_msgs/srv/: integer.srv  twoString.srv
ethercat/: CMakeLists.txt  ethercat_io.cpp  ethercat_io.h  ethercat_safety.cpp  ethercat_safety.h  ges_callback.cpp  ges_callback.h  imc_callback.cpp  imc_callback.h  ipd_callback.cpp  ipd_callback.h  launch_parameters.cpp  launch_parameters.h  led_test.cpp  package.xml  pdb_callback.cpp  pdb_callback.h  ros_init.cpp  ros_init.h  update.cpp  update.h
ethercat/launch/: march3.launch
ethercat/soem/: ethercatconfiglist.h  ethercatfoe.h  ethercatmain.h  nicdrv.c  osal.h
march_ethercat/: CMakeLists.txt  EthercatMaster.cpp  EthercatMaster.h  EthercatNode.cpp  GES.cpp  GES.h  IMC.cpp  IMC.h  PDB.cpp  PDB.h  Slave.cpp  Slave.h  TemplateGES.cpp  TemplateGES.h  ethercat_SDO.cpp  ethercat_SDO.h  ethercat_io.cpp  ethercat_safety.cpp  ethercat_safety.h  ges_callback.cpp  ges_callback.h  imc_callback.cpp  imc_callback.h  ipd_callback.h  launch_parameters.cpp  march_ethercat.cpp  package.xml  pdb_callback.cpp  ros_init.cpp  ros_init.h  update.cpp
march_ethercat/launch/: march_ethercat.launch
march_ethercat/soem/: ethercatbase.h  ethercatdc.h  ethercatprint.h  ethercatsoe.h  ethercattype.h  nicdrv.h  osal.c  osal_defs.h
march_ethercat/src/: EthercatMaster.cpp  EthercatMaster.h  EthercatNode.cpp  ethercat_io.cpp  ethercat_io.h  ethercat_safety.cpp  ethercat_safety.h
march_fake_sensor_data/: CMakeLists.txt  package.xml
march_fake_sensor_data/config/: temperatures.cfg
march_fake_sensor_data/docs/: Doxyfile
march_fake_sensor_data/launch/: march_fake_sensor_data.launch
march_fake_sensor_data/src/: FakeSensorData.cpp  FakeTemperatureData.cpp
march_gait_files/: CMakeLists.txt  package.xml
march_gait_files/airgait/: default.yaml
march_gait_files/airgait-v/: default.yaml
march_gait_files/bente/: default.yaml
march_gait_files/gait/: default.yaml
march_gait_files/minimal/: default.yaml
march_gait_files/test_versions-v/: default.yaml
march_gait_files/training/: default.yaml
march_gait_files/training-v/: default.yaml
march_gait_generator/: CMakeLists.txt  package.xml
march_gait_generator/launch/: march_gait_generator.launch
march_gait_generator/src/: Gait.cpp  GaitGenerator.cpp  GaitGenerator.h  Pose.cpp  PoseStamped.cpp  TrajectoryPreview.cpp  gaitgenerator.cpp  gaitgenerator.h  main.cpp
march_gait_generator/test/: TestPose.cpp  TestRunner.cpp  march_gait_generator.test
march_gazebo_plugins/: CMakeLists.txt  package.xml
march_gazebo_plugins/include/: com_controller_plugin.h  obstacle_controller.h  stairs_controller.h  walk_controller.h
march_gazebo_plugins/src/: com_controller.cpp  com_controller_plugin.cpp  obstacle_controller.cpp  stairs_controller.cpp  walk_controller.cpp
march_hardware/: CMakeLists.txt  package.xml
march_hardware/check/: SlaveCount.cpp
march_hardware/launch/: slave_count.launch
march_hardware/soem/: ethercatcoe.h  ethercatconfig.h  ethercattype.h  osal.h  oshw.h
march_hardware/src/: Encoder.cpp  HighVoltage.cpp  IMotionCube.cpp  IMotionCubeTargetState.cpp  Joint.cpp  LowVoltage.cpp  March4.cpp  MarchRobot.cpp  PDOmap.cpp  PowerDistributionBoard.cpp  TemperatureGES.cpp  TemperatureSensor.cpp  joint.cpp  main.cpp  march_robot.cpp
march_hardware/test/: TestBootShutdownOffsets.cpp  TestEncoder.cpp  TestHighVoltage.cpp  TestIMotionCube.cpp  TestJoint.cpp  TestLowVoltage.cpp  TestNetDriverOffsets.cpp  TestNetMonitorOffsets.cpp  TestPDOmap.cpp  TestPowerDistributionBoard.cpp  TestRunner.cpp  TestSlave.cpp  TestTemperatureGES.cpp  TestTemperatureSensor.cpp  joint_test.cpp  march4cpp.test  march_hardware.test
march_hardware_builder/: CMakeLists.txt  package.xml
march_hardware_builder/config/: Testjoint_F6FGA.sw  left_ankle.sw  left_hip_aa.sw  left_hip_fe.sw  left_knee.sw  right_ankle.sw  right_hip_aa.sw  right_hip_fe.sw  right_knee.sw  rotational_joint.sw
march_hardware_builder/docs/: Doxyfile
march_hardware_builder/robots/: march3.yaml  march4.yaml  test_joint_linear.yaml  test_joint_rotational.yaml
march_hardware_builder/src/: HardwareBuilder.cpp  hardware_builder.cpp  main.cpp
march_hardware_builder/test/: TestAllowedRobots.cpp  TestHardwareBuilderCreateEncoder.cpp  TestHardwareBuilderCreateIMotionCube.cpp  TestHardwareBuilderCreateJoint.cpp  TestHardwareBuilderCreatePowerDistributionBoard.cpp  TestRunner.cpp  absolute_encoder_builder_test.cpp  allowed_robot_test.cpp  encoder_builder_test.cpp  imc_builder_test.cpp  incremental_encoder_builder_test.cpp  joint_builder_test.cpp  march_hardware_builder.test  pdb_builder_test.cpp  test_runner.cpp
march_hardware_configuration_parser/: CMakeLists.txt  package.xml
march_hardware_configuration_parser/docs/: Doxyfile
march_hardware_interface/: CMakeLists.txt  package.xml
march_hardware_state_controller/: CMakeLists.txt  march_hardware_state_plugin.xml  package.xml
march_imu_manager/: CMakeLists.txt  package.xml
march_joint_inertia_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
march_pdb_state_controller/: CMakeLists.txt  march_pdb_state_plugin.xml  package.xml
(+10944 files in other folders)
