<?xml version="1.0"?>
<package format="2">
  <name>march_tutorials</name>
  <version>0.1.0</version>
  <description>The march_tutorials package</description>
  <license>BSD</license>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <author email="isha@projectmarch.nl">Isha Dijcks</author>
  <author email="tim@projectmarch.nl">Tim Buckers</author>
  <author email="o.dehaas@projectmarch.nl">Olav de Haas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <doc_depend>rosdoc_lite</doc_depend>
</package>
