<?xml version="1.0"?>
<package format="2">
    <name>custom_msgs</name>
    <version>0.0.0</version>
    <description>Developer input device to send commands to the march-iv</description>

    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>roscpp</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>
