<?xml version="1.0"?>
<package format="2">
  <name>ethercat</name>
  <version>0.0.0</version>
  <description>Developer input device to send commands to the march-iv</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
