<package format="2">
    <name>march_fake_sensor_data</name>
    <version>0.0.0</version>
    <description>Publishes fake sensor data for testing without hardware connected</description>

    <maintainer email="software@projectmarch.nl">Project March</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>march_shared_resources</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
    </export>
</package>
