<package format="2">
    <name>march_fake_sensor_data</name>
    <version>0.0.0</version>
    <description>Publishes fake sensor data for testing without hardware connected</description>

    <maintainer email="software@projectmarch.nl">Project March</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>march_shared_resources</depend>

    <build_depend>roslint</build_depend>
</package>
