<?xml version="1.0"?>
<package format="2">
  <name>march_gait_files</name>
  <version>0.0.0</version>
  <description>A collection of gait files designed for the March IV exoskeleton</description>

  <maintainer email="Software@projectmarch.nl">Project March</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
