<?xml version="1.0"?>
<package format="2">
  <name>march_hardware</name>
  <version>0.0.0</version>
  <description>
    C++ library to interface with the March4 hardware.
  </description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_depend>roslint</build_depend>
  <build_export_depend>rostest</build_export_depend>

  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>