<?xml version="1.0"?>
<package format="2">
  <name>march_hardware</name>
  <version>0.0.0</version>
  <description>
    Communicates with the March4 hardware.
  </description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>soem</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>code_coverage</test_depend>
</package>
